Remove original iso target, create arm64 and amd64 efi capable isos

--- a/deploy/iso/minikube-iso/board/coreos-amd64/minikube/grub.cfg
+++ b/deploy/iso/minikube-iso/board/coreos-amd64/minikube/grub.cfg
@@ -8,6 +8,6 @@ terminal_input console serial
 terminal_output gfxterm serial
 
 menuentry "Minikube" {
-	linux /Image root=LABEL=MINIKUBE rootwait loglevel=3 console=ttyAMA0 noembed nomodeset norestore waitusb=10 random.trust_cpu=on hw_rng_model=virtio systemd.legacy_systemd_cgroup_controller=yes
+	linux /bzImage root=LABEL=MINIKUBE rootwait loglevel=3 console=ttyS0 noembed nomodeset norestore waitusb=10 random.trust_cpu=on hw_rng_model=virtio systemd.legacy_systemd_cgroup_controller=yes
 	initrd /initrd
 }
