--- a/deploy/iso/minikube-iso/configs/minikube_arm64_efi_defconfig
+++ b/deploy/iso/minikube-iso/configs/minikube_arm64_efi_defconfig
@@ -33,19 +33,15 @@ BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_FINDUTILS=y
 BR2_PACKAGE_GIT=y
 BR2_PACKAGE_JQ=y
-BR2_PACKAGE_BTRFS_PROGS=y
 BR2_PACKAGE_CIFS_UTILS=y
 BR2_PACKAGE_E2TOOLS=y
 BR2_PACKAGE_NFS_UTILS=y
 BR2_PACKAGE_SSHFS=y
 BR2_PACKAGE_XFSPROGS=y
-BR2_PACKAGE_LVM2=y
-BR2_PACKAGE_LVM2_APP_LIBRARY=y
 BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_SYSSTAT=y
 BR2_PACKAGE_LUAJIT=y
 BR2_PACKAGE_CA_CERTIFICATES=y
-BR2_PACKAGE_LIBGPGME=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LIBQRENCODE=y
 BR2_PACKAGE_JSONCPP=y
@@ -54,7 +50,6 @@ BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBCURL_CURL=y
 BR2_PACKAGE_ELFUTILS=y
 BR2_PACKAGE_LIBB64=y
-BR2_PACKAGE_LIBSECCOMP=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_CONNTRACK_TOOLS=y
 BR2_PACKAGE_EBTABLES=y
@@ -77,11 +72,11 @@ BR2_PACKAGE_UTIL_LINUX_NSENTER=y
 BR2_PACKAGE_UTIL_LINUX_SCHEDUTILS=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
-BR2_TARGET_ROOTFS_EXT2=y
-BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="600M"
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_GRUB2=y
+BR2_TARGET_GRUB2_BUILTIN_MODULES="boot search search_label linux fat squash4 iso9660 gzio part_msdos part_gpt normal efi_gop serial"
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_E2TOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_HOST_XORRISO=y
