--- a/deploy/iso/minikube-iso/board/coreos-amd64/minikube/linux_defconfig
+++ b/deploy/iso/minikube-iso/board/coreos-amd64/minikube/linux_defconfig
@@ -55,6 +55,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_X86_ACPI_CPUFREQ=y
+CONFIG_X86_SYSFB=y
 CONFIG_IA32_EMULATION=y
 CONFIG_EFI_VARS=y
 CONFIG_KVM=m
@@ -477,6 +478,7 @@ CONFIG_DRM_VBOXVIDEO=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
 CONFIG_FB_EFI=y
+CONFIG_FB_SIMPLE=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
@@ -532,7 +534,8 @@ CONFIG_INTEL_IOMMU=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
-CONFIG_XFS_FS=y
+CONFIG_XFS_FS=m
+CONFIG_XFS_POSIX_ACL=y
 CONFIG_XFS_QUOTA=y
 CONFIG_XFS_POSIX_ACL=y
 CONFIG_BTRFS_FS=m
@@ -574,8 +577,8 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
+CONFIG_SECURITY_DMESG_RESTRICT=y
 CONFIG_SECURITY=y
-# CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
