--- a/deploy/iso/minikube-iso/package/Config.in
+++ b/deploy/iso/minikube-iso/package/Config.in
@@ -5,6 +5,7 @@ menu "System tools"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/conmon/Config.in"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/crio-bin/Config.in"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/crictl-bin/Config.in"
+    source "$BR2_EXTERNAL_MINIKUBE_PATH/package/crun/Config.in"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/automount/Config.in"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/docker-amd64-bin/Config.in"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/docker-arm64-bin/Config.in"
