--- a/deploy/iso/minikube-iso/package/runc-master/Config.in
+++ b/deploy/iso/minikube-iso/package/runc-master/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_RUNC_MASTER
 	bool "runc-master"
+	depends on (BR2_x86_64 || BR2_aarch64)
 	depends on BR2_PACKAGE_HOST_GO_TARGET_ARCH_SUPPORTS
 	depends on BR2_PACKAGE_HOST_GO_TARGET_CGO_LINKING_SUPPORTS
 	depends on BR2_TOOLCHAIN_HAS_THREADS
@@ -14,4 +15,4 @@ config BR2_PACKAGE_RUNC_MASTER
 comment "runc needs a toolchain w/ threads"
 	depends on BR2_PACKAGE_HOST_GO_TARGET_ARCH_SUPPORTS && \
 		BR2_PACKAGE_HOST_GO_TARGET_CGO_LINKING_SUPPORTS
-	depends on !BR2_TOOLCHAIN_HAS_THREADS
+	depends on BR2_TOOLCHAIN_HAS_THREADS
