--- a/deploy/iso/minikube-iso/package/falco-module/Config.in
+++ b/deploy/iso/minikube-iso/package/falco-module/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_FALCO_MODULE
 	bool "falco-module"
 	default y
+	depends on BR2_x86_64
 	depends on BR2_LINUX_KERNEL
 	select BR2_PACKAGE_NCURSES
 	select BR2_PACKAGE_LIBYAML
