--- a/deploy/iso/minikube-iso/configs/minikube_amd64_efi_defconfig
+++ b/deploy/iso/minikube-iso/configs/minikube_amd64_efi_defconfig
@@ -6,8 +6,8 @@ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_MINIKUBE_PATH)/board/coreos-amd64/minikube/
 BR2_SSP_STRONG=y
 BR2_TOOLCHAIN_BUILDROOT_VENDOR="minikube"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_BINUTILS_VERSION_2_33_X=y
-BR2_GCC_VERSION_9_X=y
+BR2_BINUTILS_VERSION_2_34_X=y
+BR2_GCC_VERSION_10_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
 BR2_TARGET_GENERIC_HOSTNAME="minikube"
@@ -24,13 +24,12 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_MINIKUBE_PATH)/board/coreos-amd64/m
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_LATEST_VERSION=n
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.6.15"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.7.19"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_MINIKUBE_PATH)/board/coreos-amd64/minikube/linux_defconfig"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
 BR2_PACKAGE_GZIP=y
-BR2_PACKAGE_LZ4=y
 BR2_PACKAGE_XZ=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_FINDUTILS=y
@@ -44,6 +43,8 @@ BR2_PACKAGE_XFSPROGS=y
 BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_SYSSTAT=y
 BR2_PACKAGE_LUAJIT=y
+BR2_PACKAGE_LZ4=y
+BR2_PACKAGE_LZ4_PROGS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LIBQRENCODE=y
@@ -70,6 +71,7 @@ BR2_PACKAGE_PSMISC=y
 BR2_PACKAGE_SYSTEMD_LOGIND=y
 BR2_PACKAGE_SYSTEMD_MACHINED=y
 BR2_PACKAGE_TAR=y
+BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_UTIL_LINUX_NSENTER=y
 BR2_PACKAGE_UTIL_LINUX_SCHEDUTILS=y
 BR2_TARGET_ROOTFS_CPIO=y
