--- a/deploy/iso/minikube-iso/package/gluster/Config.in
+++ b/deploy/iso/minikube-iso/package/gluster/Config.in
@@ -2,7 +2,12 @@ config BR2_PACKAGE_GLUSTER
 	bool "gluster"
 	default y
 	depends on (BR2_x86_64 || BR2_aarch64)
+	select BR2_PACKAGE_LIBAIO
 	select BR2_PACKAGE_LIBURCU
+	select BR2_PACKAGE_LIBCURL
+	select BR2_PACKAGE_LIBFUSE
+	select BR2_PACKAGE_LIBFUSE3
+	select BR2_PACKAGE_LIBTIRPC
 	select BR2_PACKAGE_LIBXML2
 	help
 	  Gluster is a scalable, distributed file system that
