Update buildroot to 2020.11, kernel to 5.9.11

--- a/deploy/iso/minikube-iso/board/coreos-amd64/minikube/linux_defconfig
+++ b/deploy/iso/minikube-iso/board/coreos-amd64/minikube/linux_defconfig
@@ -1,5 +1,5 @@
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_KERNEL_LZ4=y
+CONFIG_KERNEL_ZSTD=y
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_AUDIT=y
@@ -14,7 +14,6 @@ CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=18
 CONFIG_CGROUPS=y
 CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
@@ -36,7 +35,6 @@ CONFIG_PROFILING=y
 CONFIG_SMP=y
 CONFIG_HYPERVISOR_GUEST=y
 CONFIG_PARAVIRT_SPINLOCKS=y
-CONFIG_KVM_DEBUG_FS=y
 CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
 CONFIG_MICROCODE_AMD=y
 CONFIG_X86_MSR=y
@@ -505,7 +503,6 @@ CONFIG_USB_PRINTER=y
 CONFIG_USB_STORAGE=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-CONFIG_EDAC=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_HCTOSYS is not set
 CONFIG_DMADEVICES=y
