--- a/deploy/iso/minikube-iso/configs/minikube_arm64_efi_defconfig
+++ b/deploy/iso/minikube-iso/configs/minikube_arm64_efi_defconfig
@@ -6,7 +6,7 @@ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_MINIKUBE_PATH)/board/coreos-arm64/minikube/
 BR2_SSP_STRONG=y
 BR2_TOOLCHAIN_BUILDROOT_VENDOR="minikube"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_BINUTILS_VERSION_2_34_X=y
+BR2_BINUTILS_VERSION_2_35_X=y
 BR2_GCC_VERSION_10_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
@@ -24,13 +24,14 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_MINIKUBE_PATH)/board/coreos-arm64/m
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_LATEST_VERSION=n
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.7.19"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.9.11"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_MINIKUBE_PATH)/board/coreos-arm64/minikube/linux_defconfig"
-BR2_LINUX_KERNEL_LZ4=y
+BR2_LINUX_KERNEL_ZSTD=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
 BR2_PACKAGE_GZIP=y
 BR2_PACKAGE_XZ=y
+BR2_PACKAGE_ZSTD=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_FINDUTILS=y
 BR2_PACKAGE_GIT=y
